# SoftRenderer-Cpp-Raylib

./: .gitignore  CMakeLists.txt  Gemini_Software_Renderer.md  LICENSE  Notes.md  README.md
Documentation/: Part10_SIMD_Parallelization.md  Part11_Final.md  Part12_Simple_Triangle_line.md  Part13_Row_Column_Major.md  Part14_3D_RotationAndHandedness.md  Part15_Projection_matrix.md  Part16-fixed-point-rasterizer.md  Part1_Render_Culling.md  Part2_Lighting.md  Part3_Pipeline.md  Part4_Math_Projection.md  Part5_Matrices_Camera.md  Part6_Orbit_Camera.md  Part7_Clipping.md  Part8_Triangle_Rasterization.md  Part9_SubPixel_Rasterization.md  turntable-camera-md
PikumaSoftwareRenderer/: .gdbinit  CMakeLists.txt  KeyControl.cpp  KeyControl.h  main.cpp  readme.md  window.state
PikumaSoftwareRenderer/Base/: CColor.cpp  CColor.h  CMakeLists.txt  Canvas.cpp  Canvas.h
PikumaSoftwareRenderer/BaseGeometry/: CMakeLists.txt  Face.cpp  Face.h  Frustum.cpp  Frustum.h  GridLines.cpp  GridLines.h  Line.cpp  Line.h  LineCollection.cpp  LineCollection.h  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  Polygon.cpp  Polygon.h  Texture.cpp  Texture.h  TriAxisLines.cpp  TriAxisLines.h  Triangle.cpp  Triangle.h
PikumaSoftwareRenderer/BaseMaths/: CMakeLists.txt  Constants.h  Matrix4.cpp  Matrix4.h  Texture2f.cpp  Texture2f.h  Utilities.h  Vector2f.cpp  Vector2f.h  Vector3f.cpp  Vector3f.h  Vector4f.cpp  Vector4f.h  VectorBase.cpp  VectorBase.h  Vectorf.cpp  Vectorf.h
PikumaSoftwareRenderer/Image/: CMakeLists.txt  upng.h
PikumaSoftwareRenderer/Lights/: CMakeLists.txt  DirectionalLight.cpp  DirectionalLight.h
PikumaSoftwareRenderer/Particles/: CMakeLists.txt  Particle.cpp  Particle.h
PikumaSoftwareRenderer/Renderer/: CMakeLists.txt  Painter.cpp  Painter.h  Pipeline.cpp  Pipeline.h  ZBuffer.cpp  ZBuffer.h
PikumaSoftwareRenderer/View/: CMakeLists.txt  Camera.cpp  Camera.h  TargetCamera.cpp  TargetCamera.h  TurntableCamera.cpp  TurntableCamera.h  YawPitchCamera.cpp  YawPitchCamera.h
PipelineRenderer/: CMakeLists.txt  Project.md  main.cpp
PipelineRenderer/Core/: ArcBall.cpp  ArcBall.h  CColor.cpp  CMakeLists.txt  Canvas.cpp  Canvas.h  Fragment.h  Frustum.cpp  Frustum.h  Painter.cpp  Painter.h  Pipeline.cpp  Pipeline.h  TransformedVertext.h  Vertex.h  ZBuffer.cpp
PipelineRenderer/Maths/: CMakeLists.txt  Constants.h  Matrix4f.cpp  Matrix4f.h  Plane.cpp  Plane.h  Quat4f.cpp  Quat4f.h  Vector3f.cpp  Vector3f.h
PipelineRenderer/Objects3D/: Builder.cpp  Builder.h  CMakeLists.txt  CubeObject.cpp  CubeObject.h  Face.h  LineObject.cpp  LineObject.h  Object3D.cpp  Object3D.h  Tetrahedron.cpp  Tetrahedron.h
SimpleWindow/: CMakeLists.txt  Project.md  main.cpp  window.state
SoftRenderer/: CMakeLists.txt  Project.md  main.cpp  test_bresenham_lines.cpp  test_bresenham_lines.h  test_wu_blended_lines.cpp  test_wu_blended_lines.h
SoftRenderer/Drawing/: CColor.cpp  CColor.h  CMakeLists.txt  Canvas.cpp  Canvas.h  EdgeInterpolation.cpp  EdgeInterpolation.h  GradientInterpolation.cpp  GradientInterpolation.h  Painting.cpp  Painting.h  WuColor.cpp  WuColor.h
SoftRenderer/Geometry/: CMakeLists.txt  Database.cpp  Database.h  Edge.cpp  Edge.h  FlatShaded.cpp  FlatShaded.h  LineObject.cpp  LineObject.h  Object3D.cpp  Object3D.h  ShadeBase.cpp  ShadeBase.h  Triangle.cpp  Triangle.h  WireMeshObject.cpp  WireMeshObject.h
SoftRenderer/Graphics/: ArcBall.cpp  ArcBall.h  CMakeLists.txt  ZBuffer.cpp  ZBuffer.h
SoftRenderer/Lighting/: CMakeLists.txt  DirectionalLight.cpp  DirectionalLight.h  GlobalIllumination.cpp  GlobalIllumination.h  LightBase.cpp  LightBase.h  PointLight.cpp  PointLight.h
SoftRenderer/Math/: AxisAngle4f.cpp  AxisAngle4f.h  CMakeLists.txt  Constants.h  Matrix4f.cpp  Matrix4f.h  Plane.cpp  Plane.h  Point3f.cpp  Point3f.h  Rectangle.cpp  Rectangle.h  Vector3f.cpp  Vector3f.h  Vertex3f.cpp  Vertex3f.h
SoftRenderer/Pipeline/: CMakeLists.txt  Frustum.cpp  Frustum.h  Pipeline.cpp  Pipeline.h
